--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,9 +1,9 @@
 {
-  "Total tokens": "Gesamt-Tokens",
+  "Total tokens": "Total tokens",
   "PHEN": "PHEN",
   "Boosts": "Boosts",
   "Skins": "Skins",
-  "Language": "Sprache",
-  "Settings": "Einstellungen",
+  "Language": "Language",
+  "Settings": "Settings",
   "Connect TON Wallet": "Connect TON Wallet"
 }
