Translation english all components

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,26 +1,63 @@
 {
-  "Total tokens": "Total tokens",
-  "PHEN": "PHEN",
+  "Home": "Home",
   "Boosts": "Boosts",
-  "Skins": "Skins",
+  "Game": "Game",
+  "Tasks": "Tasks",
+  "Profile": "Profile",
+  "+ Add boosts": "+ Add boosts",
+  "Total tokens": "Total tokens",
   "Language": "Language",
-  "Settings": "Settings",
-  "Connect TON Wallet": "Connect TON Wallet",
-  "Your address": "Your address",
-  "Farm PHEN Tokens": "Farm PHEN Tokens",
+  "Farm tokens": "Farm tokens",
   "Farm": "Farm",
+  "Claim": "Claim",
   "Listing price": "Listing price",
   "Farming end": "Farming end",
   "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.",
-  "Presale": "Presale",
-  "Presale price": "Presale price",
-  "Buy": "Buy",
   "Airdrop": "Airdrop",
   "To participate in the airdrop, purchase tokens worth $50 during the presale.": "To participate in the airdrop, purchase tokens worth $50 during the presale.",
   "Join the Airdrop": "Join the Airdrop",
   "Join our family": "Join our family",
   "Join the friendly Phenerium family and take part in sweepstakes!": "Join the friendly Phenerium family and take part in sweepstakes!",
   "Invite friends and get 500 PHEN for each!": "Invite friends and get 500 PHEN for each!",
-  "No friends yet": "No friends yet",
-  "Invite": "Invite"
+  "Invite": "Invite",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": " We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!",
+  "Paste your Telegram referral link below and share for free Stars!": "Paste your Telegram referral link below and share for free Stars!",
+  "Invite for free Stars": "Invite for free Stars",
+  "Open Phenerium": "Open Phenerium",
+  "Open Phenerium, and go to the info menu.": "Open Phenerium, and go to the info menu.",
+  "Find Affiliate Program": "Find Affiliate Program",
+  "Scroll to 'Affiliate Program' and select one.": "Scroll to 'Affiliate Program' and select one.",
+  "Copy Link": "Copy Link",
+  "Locate the referral link and copy it.": "Locate the referral link and copy it.",
+  "Go to 'Friends'": "Go to 'Friends'",
+  "Return to Phenerium and go to the 'Friends' section.": "Return to Phenerium and go to the 'Friends' section.",
+  "Paste and Done": "Paste and Done",
+  "Paste the link into the field and press 'Done'.": "Paste the link into the field and press 'Done'.",
+  "Get Bonus": "Get Bonus",
+  "Bonus will be credited automatically after submission.": "Bonus will be credited automatically after submission.",
+  "Farming Boosts": "Farming Boosts",
+  "You dont have any boosts": "You dont have any boosts 😔",
+  "Add Boosts": "Add Boosts",
+  "Buy": "Buy",
+  "Select Language": "Select Language",
+  "No content": "No content",
+  "Cases": "Cases",
+  "Robot Assistants": "Robot Assistants",
+  "Roadmap": "Roadmap",
+  "Cosmo Forge": "Cosmo Forge",
+  "Shuttle Dock": "Shuttle Dock",
+  "Warehouse": "Warehouse",
+  "Collections ✨": "Collections ✨",
+  "Basic": "Basic",
+  "Bronze": "Warehouse",
+  "Silver": "Silver",
+  "Gold": "Gold",
+  "Platinum": "Platinum",
+  "Diamond": "Diamond",
+  "Friends": "Friends",
+  "Bronze Collection": "Bronze Collection",
+  "Silver Collection": "Silver Collection",
+  "Gold Collection": "Gold Collection",
+  "Platinum Collection": "Platinum Collection",
+  "Diamond Collection": "Diamond Collection"
 }
