--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,24 +1,64 @@
 {
-  "+ Add boosts": "+ Add boosts",
-  "Total tokens": "Total tokens",
-  "Boosts": "Boosts",
-  "Language": "Language",
-  "Connect TON Wallet": "Connect TON Wallet",
-  "Your address": "Your address",
-  "Farm PHEN Tokens": "Farm PHEN Tokens",
-  "Farm": "Farm",
-  "Listing price": "Listing price",
-  "Farming end": "Farming end",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.",
-  "Presale": "Presale",
-  "Presale price": "Presale price",
-  "Buy": "Buy",
-  "Airdrop": "Airdrop",
-  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "To participate in the airdrop, purchase tokens worth $50 during the presale.",
-  "Join the Airdrop": "Join the Airdrop",
-  "Join our family": "Join our family",
-  "Join the friendly Phenerium family and take part in sweepstakes!": "Join the friendly Phenerium family and take part in sweepstakes!",
-  "Invite friends and get 500 PHEN for each!": "Invite friends and get 500 PHEN for each!",
-  "No friends yet": "No friends yet",
-  "Invite": "Invite"
+  "Home": "الصفحة الرئيسية",
+  "Boosts": "التعزيزات",
+  "Game": "اللعبة",
+  "Tasks": "المهام",
+  "Profile": "الملف الشخصي",
+  "+ Add boosts": "+ أضف تعزيزات",
+  "Total tokens": "إجمالي الرموز",
+  "Language": "اللغة",
+  "Farm tokens": "رموز المزرعة",
+  "Farm": "المزرعة",
+  "Claim": "استلام",
+  "Listing price": "سعر الإدراج",
+  "Farming end": "نهاية الزراعة",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "سيتم الإعلان عن تاريخ الاستحقاق من قبل الفريق بالقرب من تاريخ الإدراج. ترقبوا التحديثات.",
+  "Airdrop": "توزيع مجاني",
+  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "للمشاركة في التوزيع المجاني، اشترِ رموزًا بقيمة 50 دولارًا أثناء مرحلة البيع المسبق.",
+  "Join the Airdrop": "انضم إلى التوزيع المجاني",
+  "Join our family": "انضم إلى عائلتنا",
+  "Join the friendly Phenerium family and take part in sweepstakes!": "انضم إلى عائلة Phenerium الودية وشارك في السحوبات!",
+  "Invite friends and get 500 PHEN for each!": "ادعُ أصدقاءك واحصل على 500 PHEN لكل واحد!",
+  "Invite": "دعوة",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "نشارك أيضًا في برنامج الإحالة التابع لتليغرام، حيث يمكنك الحصول على 50٪ من النجوم التي ينفقها أصدقاؤك!",
+  "Paste your Telegram referral link below and share for free Stars!": "الصق رابط الإحالة لتليغرام أدناه وشاركه للحصول على نجوم مجانية!",
+  "Invite for free Stars": "ادعُ للحصول على نجوم مجانية",
+  "Where can I get a Telegram referral link?": "أين يمكنني الحصول على رابط الإحالة في تليغرام؟",
+  "Open Phenerium": "افتح Phenerium",
+  "Open Phenerium, and go to the info menu.": "افتح Phenerium وانتقل إلى قائمة المعلومات.",
+  "Find Affiliate Program": "ابحث عن برنامج الشراكة",
+  "Scroll to 'Affiliate Program' and select one.": "مرر إلى 'برنامج الشراكة' واختر أحدها.",
+  "Copy Link": "انسخ الرابط",
+  "Locate the referral link and copy it.": "حدد رابط الإحالة وانسخه.",
+  "Go to 'Friends'": "اذهب إلى 'الأصدقاء'",
+  "Return to Phenerium and go to the 'Friends' section.": "ارجع إلى Phenerium وانتقل إلى قسم 'الأصدقاء'.",
+  "Paste and Done": "الصق وانتهى",
+  "Paste the link into the field and press 'Done'.": "الصق الرابط في الحقل واضغط على 'تم'.",
+  "Get Bonus": "احصل على المكافأة",
+  "Bonus will be credited automatically after submission.": "سيتم إضافة المكافأة تلقائيًا بعد الإرسال.",
+  "Farming Boosts": "تعزيزات الزراعة",
+  "You dont have any boosts 😔": "ليس لديك أي تعزيزات 😔",
+  "Add Boosts": "أضف تعزيزات",
+  "Buy": "شراء",
+  "Select Language": "اختر اللغة",
+  "No content": "لا يوجد محتوى",
+  "Cases": "الحالات",
+  "Robot Assistants": "المساعدون الآليون",
+  "Roadmap": "خريطة الطريق",
+  "Cosmo Forge": "حدادة كوزمو",
+  "Shuttle Dock": "رصيف المكوك",
+  "Warehouse": "المستودع",
+  "Collections ✨": "المجموعات ✨",
+  "Basic": "أساسي",
+  "Bronze": "برونزي",
+  "Silver": "فضي",
+  "Gold": "ذهبي",
+  "Platinum": "بلاتيني",
+  "Diamond": "ماسي",
+  "Friends": "الأصدقاء",
+  "Bronze Collection": "مجموعة برونزية",
+  "Silver Collection": "مجموعة فضية",
+  "Gold Collection": "مجموعة ذهبية",
+  "Platinum Collection": "مجموعة بلاتينية",
+  "Diamond Collection": "مجموعة ماسية"
 }
