--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -23,6 +23,7 @@
   "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": " We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!",
   "Paste your Telegram referral link below and share for free Stars!": "Paste your Telegram referral link below and share for free Stars!",
   "Invite for free Stars": "Invite for free Stars",
+  "Where can I get a Telegram referral link?": "Where can I get a Telegram referral link?",
   "Open Phenerium": "Open Phenerium",
   "Open Phenerium, and go to the info menu.": "Open Phenerium, and go to the info menu.",
   "Find Affiliate Program": "Find Affiliate Program",
@@ -36,7 +37,7 @@
   "Get Bonus": "Get Bonus",
   "Bonus will be credited automatically after submission.": "Bonus will be credited automatically after submission.",
   "Farming Boosts": "Farming Boosts",
-  "You dont have any boosts": "You dont have any boosts 😔",
+  "You dont have any boosts 😔": "You dont have any boosts 😔",
   "Add Boosts": "Add Boosts",
   "Buy": "Buy",
   "Select Language": "Select Language",
