--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -1,26 +1,64 @@
 {
-  "Total tokens": "Łączna liczba tokenów",
-  "PHEN": "PHEN",
+  "Home": "Dom",
   "Boosts": "Wzmocnienia",
-  "Skins": "Skórki",
+  "Game": "Gra",
+  "Tasks": "Zadania",
+  "Profile": "Profil",
+  "+ Add boosts": "+ Dodaj wzmocnienia",
+  "Total tokens": "Łączna liczba tokenów",
   "Language": "Język",
-  "Settings": "Ustawienia",
-  "Connect TON Wallet": "Połącz portfel TON",
-  "Your address": "Twój adres",
-  "Farm PHEN Tokens": "Farmienie tokenów PHEN",
-  "Farm": "Farmić",
+  "Farm tokens": "Zbieraj tokeny",
+  "Farm": "Farma",
+  "Claim": "Odbierz",
   "Listing price": "Cena notowania",
   "Farming end": "Koniec farmienia",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "Data vestingu zostanie ogłoszona przez zespół bliżej notowania. Śledź aktualizacje.",
-  "Presale": "Przedsprzedaż",
-  "Presale price": "Cena przedsprzedaży",
-  "Buy": "Kup",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "Data wypłaty tokenów zostanie ogłoszona przez zespół bliżej notowania. Śledź aktualizacje.",
   "Airdrop": "Airdrop",
-  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "Aby wziąć udział w airdropie, kup tokeny o wartości 50 USD w przedsprzedaży.",
-  "Join the Airdrop": "Dołącz do Airdropa",
+  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "Aby wziąć udział w airdropie, kup tokeny o wartości 50 USD podczas przedsprzedaży.",
+  "Join the Airdrop": "Dołącz do Airdropu",
   "Join our family": "Dołącz do naszej rodziny",
-  "Join the friendly Phenerium family and take part in sweepstakes!": "Dołącz do przyjaznej rodziny Phenerium i weź udział w konkursach!",
-  "Invite friends and get 500 PHEN for each!": "Zaproś znajomych i otrzymaj 500 PHEN za każdego!",
-  "No friends yet": "Brak znajomych",
-  "Invite": "Zaproś"
+  "Join the friendly Phenerium family and take part in sweepstakes!": "Dołącz do przyjaznej rodziny Phenerium i weź udział w loteriach!",
+  "Invite friends and get 500 PHEN for each!": "Zaproś przyjaciół i otrzymaj 500 PHEN za każdego!",
+  "Invite": "Zaproś",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "Bierzemy również udział w programie poleceń afiliacyjnych Telegrama, gdzie możesz otrzymać 50% Gwiazd, które wydadzą Twoi znajomi!",
+  "Paste your Telegram referral link below and share for free Stars!": "Wklej poniżej swój link polecający Telegram i udostępniaj, aby zdobyć darmowe Gwiazdy!",
+  "Invite for free Stars": "Zaproś, aby otrzymać darmowe Gwiazdy",
+  "Where can I get a Telegram referral link?": "Gdzie mogę znaleźć link polecający Telegram?",
+  "Open Phenerium": "Otwórz Phenerium",
+  "Open Phenerium, and go to the info menu.": "Otwórz Phenerium i przejdź do menu informacyjnego.",
+  "Find Affiliate Program": "Znajdź Program Afiliacyjny",
+  "Scroll to 'Affiliate Program' and select one.": "Przewiń do 'Programu Afiliacyjnego' i wybierz jeden.",
+  "Copy Link": "Skopiuj Link",
+  "Locate the referral link and copy it.": "Znajdź link polecający i skopiuj go.",
+  "Go to 'Friends'": "Przejdź do 'Przyjaciół'",
+  "Return to Phenerium and go to the 'Friends' section.": "Wróć do Phenerium i przejdź do sekcji 'Przyjaciele'.",
+  "Paste and Done": "Wklej i Gotowe",
+  "Paste the link into the field and press 'Done'.": "Wklej link do pola i naciśnij 'Gotowe'.",
+  "Get Bonus": "Odbierz Bonus",
+  "Bonus will be credited automatically after submission.": "Bonus zostanie automatycznie przyznany po przesłaniu.",
+  "Farming Boosts": "Wzmocnienia Farmienia",
+  "You dont have any boosts 😔": "Nie masz żadnych wzmocnień 😔",
+  "Add Boosts": "Dodaj Wzmocnienia",
+  "Buy": "Kup",
+  "Select Language": "Wybierz Język",
+  "No content": "Brak treści",
+  "Cases": "Skrzynie",
+  "Robot Assistants": "Asystenci Robotów",
+  "Roadmap": "Mapa drogowa",
+  "Cosmo Forge": "Kosmiczna Kuźnia",
+  "Shuttle Dock": "Dok Promowy",
+  "Warehouse": "Magazyn",
+  "Collections ✨": "Kolekcje ✨",
+  "Basic": "Podstawowa",
+  "Bronze": "Magazyn",
+  "Silver": "Srebrna",
+  "Gold": "Złota",
+  "Platinum": "Platynowa",
+  "Diamond": "Diamentowa",
+  "Friends": "Przyjaciele",
+  "Bronze Collection": "Kolekcja Brązowa",
+  "Silver Collection": "Kolekcja Srebrna",
+  "Gold Collection": "Kolekcja Złota",
+  "Platinum Collection": "Kolekcja Platynowa",
+  "Diamond Collection": "Kolekcja Diamentowa"
 }
