--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -1,26 +1,64 @@
 {
-  "Total tokens": "Token totali",
-  "PHEN": "PHEN",
+  "Home": "Casa",
   "Boosts": "Potenziamenti",
-  "Skins": "Skin",
+  "Game": "Gioco",
+  "Tasks": "Compiti",
+  "Profile": "Profilo",
+  "+ Add boosts": "+ Aggiungi potenziamenti",
+  "Total tokens": "Token totali",
   "Language": "Lingua",
-  "Settings": "Impostazioni",
-  "Connect TON Wallet": "Collega il portafoglio TON",
-  "Your address": "Il tuo indirizzo",
-  "Farm PHEN Tokens": "Coltiva token PHEN",
-  "Farm": "Coltivare",
+  "Farm tokens": "Coltiva token",
+  "Farm": "Fattoria",
+  "Claim": "Riscatta",
   "Listing price": "Prezzo di quotazione",
-  "Farming end": "Fine della coltivazione",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "La data di maturazione sarà annunciata dal team più vicino alla quotazione. Resta aggiornato.",
-  "Presale": "Prevendita",
-  "Presale price": "Prezzo prevendita",
-  "Buy": "Acquista",
+  "Farming end": "Fine del farming",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "La data di vesting sarà annunciata dal team più vicino alla quotazione. Resta sintonizzato per gli aggiornamenti.",
   "Airdrop": "Airdrop",
-  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "Per partecipare all'airdrop, acquista token per un valore di 50$ durante la prevendita.",
-  "Join the Airdrop": "Unisciti all'Airdrop",
+  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "Per partecipare all'airdrop, acquista token per un valore di $50 durante la prevendita.",
+  "Join the Airdrop": "Partecipa all'Airdrop",
   "Join our family": "Unisciti alla nostra famiglia",
-  "Join the friendly Phenerium family and take part in sweepstakes!": "Unisciti alla famiglia Phenerium e partecipa ai concorsi!",
-  "Invite friends and get 500 PHEN for each!": "Invita gli amici e ottieni 500 PHEN per ognuno!",
-  "No friends yet": "Nessun amico ancora",
-  "Invite": "Invita"
+  "Join the friendly Phenerium family and take part in sweepstakes!": "Unisciti alla famiglia amichevole di Phenerium e partecipa ai concorsi a premi!",
+  "Invite friends and get 500 PHEN for each!": "Invita amici e ottieni 500 PHEN per ciascuno!",
+  "Invite": "Invita",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "Partecipiamo anche al programma di referral affiliato di Telegram, dove puoi ottenere il 50% delle Stelle spese dai tuoi amici!",
+  "Paste your Telegram referral link below and share for free Stars!": "Incolla il tuo link di referral di Telegram qui sotto e condividi per ottenere Stelle gratuite!",
+  "Invite for free Stars": "Invita per Stelle gratuite",
+  "Where can I get a Telegram referral link?": "Dove posso trovare un link di referral di Telegram?",
+  "Open Phenerium": "Apri Phenerium",
+  "Open Phenerium, and go to the info menu.": "Apri Phenerium e vai al menu delle informazioni.",
+  "Find Affiliate Program": "Trova il Programma di Affiliazione",
+  "Scroll to 'Affiliate Program' and select one.": "Scorri fino a 'Programma di Affiliazione' e selezionane uno.",
+  "Copy Link": "Copia Link",
+  "Locate the referral link and copy it.": "Trova il link di referral e copialo.",
+  "Go to 'Friends'": "Vai a 'Amici'",
+  "Return to Phenerium and go to the 'Friends' section.": "Torna a Phenerium e vai alla sezione 'Amici'.",
+  "Paste and Done": "Incolla e Fatto",
+  "Paste the link into the field and press 'Done'.": "Incolla il link nel campo e premi 'Fatto'.",
+  "Get Bonus": "Ottieni Bonus",
+  "Bonus will be credited automatically after submission.": "Il bonus sarà accreditato automaticamente dopo l'invio.",
+  "Farming Boosts": "Potenziamenti per il Farming",
+  "You dont have any boosts 😔": "Non hai nessun potenziamento 😔",
+  "Add Boosts": "Aggiungi Potenziamenti",
+  "Buy": "Compra",
+  "Select Language": "Seleziona Lingua",
+  "No content": "Nessun contenuto",
+  "Cases": "Casse",
+  "Robot Assistants": "Assistenti Robot",
+  "Roadmap": "Roadmap",
+  "Cosmo Forge": "Fucina Cosmo",
+  "Shuttle Dock": "Darsena Navetta",
+  "Warehouse": "Magazzino",
+  "Collections ✨": "Collezioni ✨",
+  "Basic": "Base",
+  "Bronze": "Magazzino",
+  "Silver": "Argento",
+  "Gold": "Oro",
+  "Platinum": "Platino",
+  "Diamond": "Diamante",
+  "Friends": "Amici",
+  "Bronze Collection": "Collezione Bronzo",
+  "Silver Collection": "Collezione Argento",
+  "Gold Collection": "Collezione Oro",
+  "Platinum Collection": "Collezione Platino",
+  "Diamond Collection": "Collezione Diamante"
 }
