--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,26 +1,64 @@
 {
-  "Total tokens": "Total des jetons",
-  "PHEN": "PHEN",
+  "Home": "Accueil",
   "Boosts": "Boosts",
-  "Skins": "Skins",
+  "Game": "Jeu",
+  "Tasks": "Tâches",
+  "Profile": "Profil",
+  "+ Add boosts": "+ Ajouter des boosts",
+  "Total tokens": "Total des jetons",
   "Language": "Langue",
-  "Settings": "Paramètres",
-  "Connect TON Wallet": "Connecter le portefeuille TON",
-  "Your address": "Votre adresse",
-  "Farm PHEN Tokens": "Cultiver des jetons PHEN",
-  "Farm": "Cultiver",
-  "Listing price": "Prix d'inscription",
-  "Farming end": "Fin de la culture",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "La date d'acquisition sera annoncée par l'équipe plus proche de l'inscription. Restez à l'écoute des mises à jour.",
-  "Presale": "Prévente",
-  "Presale price": "Prix de la prévente",
-  "Buy": "Acheter",
+  "Farm tokens": "Cultiver des jetons",
+  "Farm": "Ferme",
+  "Claim": "Réclamer",
+  "Listing price": "Prix de cotation",
+  "Farming end": "Fin de l'agriculture",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "La date de déblocage sera annoncée par l'équipe plus près de la cotation. Restez à l'écoute pour les mises à jour.",
   "Airdrop": "Airdrop",
-  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "Pour participer à l'airdrop, achetez des jetons d'une valeur de 50 $ lors de la prévente.",
-  "Join the Airdrop": "Rejoindre l'Airdrop",
+  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "Pour participer à l'airdrop, achetez des jetons d'une valeur de 50 $ pendant la prévente.",
+  "Join the Airdrop": "Participer à l'Airdrop",
   "Join our family": "Rejoignez notre famille",
-  "Join the friendly Phenerium family and take part in sweepstakes!": "Rejoignez la famille Phenerium et participez aux concours!",
-  "Invite friends and get 500 PHEN for each!": "Invitez des amis et recevez 500 PHEN pour chacun!",
-  "No friends yet": "Pas encore d'amis",
-  "Invite": "Inviter"
+  "Join the friendly Phenerium family and take part in sweepstakes!": "Rejoignez la famille amicale de Phenerium et participez à des tirages au sort !",
+  "Invite friends and get 500 PHEN for each!": "Invitez des amis et obtenez 500 PHEN pour chacun !",
+  "Invite": "Inviter",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "Nous participons également au programme de parrainage affilié de Telegram, où vous pouvez obtenir 50 % des Étoiles dépensées par vos amis !",
+  "Paste your Telegram referral link below and share for free Stars!": "Collez votre lien de parrainage Telegram ci-dessous et partagez pour des Étoiles gratuites !",
+  "Invite for free Stars": "Invitez pour des Étoiles gratuites",
+  "Where can I get a Telegram referral link?": "Où puis-je obtenir un lien de parrainage Telegram ?",
+  "Open Phenerium": "Ouvrir Phenerium",
+  "Open Phenerium, and go to the info menu.": "Ouvrez Phenerium et accédez au menu des informations.",
+  "Find Affiliate Program": "Trouver le Programme d'Affiliation",
+  "Scroll to 'Affiliate Program' and select one.": "Faites défiler jusqu'à 'Programme d'Affiliation' et sélectionnez-en un.",
+  "Copy Link": "Copier le Lien",
+  "Locate the referral link and copy it.": "Trouvez le lien de parrainage et copiez-le.",
+  "Go to 'Friends'": "Aller à 'Amis'",
+  "Return to Phenerium and go to the 'Friends' section.": "Retournez à Phenerium et accédez à la section 'Amis'.",
+  "Paste and Done": "Coller et Terminé",
+  "Paste the link into the field and press 'Done'.": "Collez le lien dans le champ et appuyez sur 'Terminé'.",
+  "Get Bonus": "Obtenir un Bonus",
+  "Bonus will be credited automatically after submission.": "Le bonus sera crédité automatiquement après la soumission.",
+  "Farming Boosts": "Boosts de Farming",
+  "You dont have any boosts 😔": "Vous n'avez aucun boost 😔",
+  "Add Boosts": "Ajouter des Boosts",
+  "Buy": "Acheter",
+  "Select Language": "Sélectionner la Langue",
+  "No content": "Aucun contenu",
+  "Cases": "Caisses",
+  "Robot Assistants": "Assistants Robots",
+  "Roadmap": "Feuille de route",
+  "Cosmo Forge": "Forge Cosmo",
+  "Shuttle Dock": "Quai de Navette",
+  "Warehouse": "Entrepôt",
+  "Collections ✨": "Collections ✨",
+  "Basic": "Basique",
+  "Bronze": "Entrepôt",
+  "Silver": "Argent",
+  "Gold": "Or",
+  "Platinum": "Platine",
+  "Diamond": "Diamant",
+  "Friends": "Amis",
+  "Bronze Collection": "Collection Bronze",
+  "Silver Collection": "Collection Argent",
+  "Gold Collection": "Collection Or",
+  "Platinum Collection": "Collection Platine",
+  "Diamond Collection": "Collection Diamant"
 }
