--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,26 +1,64 @@
 {
-  "Total tokens": "Gesamtanzahl der Token",
-  "PHEN": "PHEN",
+  "Home": "Startseite",
   "Boosts": "Boosts",
-  "Skins": "Skins",
+  "Game": "Spiel",
+  "Tasks": "Aufgaben",
+  "Profile": "Profil",
+  "+ Add boosts": "+ Boosts hinzufügen",
+  "Total tokens": "Gesamte Token",
   "Language": "Sprache",
-  "Settings": "Einstellungen",
-  "Connect TON Wallet": "TON-Wallet verbinden",
-  "Your address": "Deine Adresse",
-  "Farm PHEN Tokens": "PHEN-Token farmen",
-  "Farm": "Farmen",
-  "Listing price": "Notierungspreis",
+  "Farm tokens": "Token farmen",
+  "Farm": "Farm",
+  "Claim": "Anspruch erheben",
+  "Listing price": "Listing-Preis",
   "Farming end": "Ende des Farmings",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "Das Vesting-Datum wird vom Team näher zur Notierung bekannt gegeben. Bleiben Sie auf dem Laufenden.",
-  "Presale": "Vorverkauf",
-  "Presale price": "Vorverkaufspreis",
-  "Buy": "Kaufen",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "Das Vesting-Datum wird vom Team näher am Listing bekannt gegeben. Bleiben Sie für Updates dran.",
   "Airdrop": "Airdrop",
-  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "Um am Airdrop teilzunehmen, kaufen Sie Token im Wert von 50 $ während des Vorverkaufs.",
+  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "Um am Airdrop teilzunehmen, kaufen Sie während des Vorverkaufs Token im Wert von 50 $.",
   "Join the Airdrop": "Am Airdrop teilnehmen",
   "Join our family": "Treten Sie unserer Familie bei",
   "Join the friendly Phenerium family and take part in sweepstakes!": "Treten Sie der freundlichen Phenerium-Familie bei und nehmen Sie an Gewinnspielen teil!",
-  "Invite friends and get 500 PHEN for each!": "Lade Freunde ein und erhalte 500 PHEN für jeden!",
-  "No friends yet": "Noch keine Freunde",
-  "Invite": "Einladen"
+  "Invite friends and get 500 PHEN for each!": "Laden Sie Freunde ein und erhalten Sie 500 PHEN für jeden!",
+  "Invite": "Einladen",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "Wir nehmen auch am Telegram-Affiliate-Programm teil, bei dem Sie 50 % der Sterne erhalten, die Ihre Freunde ausgeben!",
+  "Paste your Telegram referral link below and share for free Stars!": "Fügen Sie unten Ihren Telegram-Empfehlungslink ein und teilen Sie ihn für kostenlose Sterne!",
+  "Invite for free Stars": "Einladen für kostenlose Sterne",
+  "Where can I get a Telegram referral link?": "Wo finde ich einen Telegram-Empfehlungslink?",
+  "Open Phenerium": "Phenerium öffnen",
+  "Open Phenerium, and go to the info menu.": "Öffnen Sie Phenerium und gehen Sie zum Info-Menü.",
+  "Find Affiliate Program": "Affiliate-Programm finden",
+  "Scroll to 'Affiliate Program' and select one.": "Scrollen Sie zu 'Affiliate-Programm' und wählen Sie eines aus.",
+  "Copy Link": "Link kopieren",
+  "Locate the referral link and copy it.": "Finden Sie den Empfehlungslink und kopieren Sie ihn.",
+  "Go to 'Friends'": "Zu 'Freunde' gehen",
+  "Return to Phenerium and go to the 'Friends' section.": "Kehren Sie zu Phenerium zurück und gehen Sie zum Abschnitt 'Freunde'.",
+  "Paste and Done": "Einfügen und Fertig",
+  "Paste the link into the field and press 'Done'.": "Fügen Sie den Link in das Feld ein und drücken Sie 'Fertig'.",
+  "Get Bonus": "Bonus erhalten",
+  "Bonus will be credited automatically after submission.": "Der Bonus wird nach der Einreichung automatisch gutgeschrieben.",
+  "Farming Boosts": "Farming-Boosts",
+  "You dont have any boosts 😔": "Sie haben keine Boosts 😔",
+  "Add Boosts": "Boosts hinzufügen",
+  "Buy": "Kaufen",
+  "Select Language": "Sprache auswählen",
+  "No content": "Kein Inhalt",
+  "Cases": "Kisten",
+  "Robot Assistants": "Roboter-Assistenten",
+  "Roadmap": "Roadmap",
+  "Cosmo Forge": "Kosmo-Schmiede",
+  "Shuttle Dock": "Shuttle-Dock",
+  "Warehouse": "Lager",
+  "Collections ✨": "Sammlungen ✨",
+  "Basic": "Basis",
+  "Bronze": "Lager",
+  "Silver": "Silber",
+  "Gold": "Gold",
+  "Platinum": "Platin",
+  "Diamond": "Diamant",
+  "Friends": "Freunde",
+  "Bronze Collection": "Bronze-Sammlung",
+  "Silver Collection": "Silber-Sammlung",
+  "Gold Collection": "Gold-Sammlung",
+  "Platinum Collection": "Platin-Sammlung",
+  "Diamond Collection": "Diamant-Sammlung"
 }
