--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,26 +1,64 @@
 {
+  "Home": "Inicio",
+  "Boosts": "Potenciadores",
+  "Game": "Juego",
+  "Tasks": "Tareas",
+  "Profile": "Perfil",
+  "+ Add boosts": "+ Agregar potenciadores",
   "Total tokens": "Total de tokens",
-  "PHEN": "PHEN",
-  "Boosts": "Mejoras",
-  "Skins": "Aspectos",
   "Language": "Idioma",
-  "Settings": "Configuración",
-  "Connect TON Wallet": "Conectar billetera TON",
-  "Your address": "Tu dirección",
-  "Farm PHEN Tokens": "Cultivar tokens PHEN",
-  "Farm": "Cultivar",
+  "Farm tokens": "Cultivar tokens",
+  "Farm": "Granja",
+  "Claim": "Reclamar",
   "Listing price": "Precio de cotización",
   "Farming end": "Fin del cultivo",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "La fecha de adquisición será anunciada por el equipo más cerca de la cotización. Mantente atento a las actualizaciones.",
-  "Presale": "Preventa",
-  "Presale price": "Precio de preventa",
-  "Buy": "Comprar",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "La fecha de desbloqueo será anunciada por el equipo más cerca de la cotización. Manténgase atento a las actualizaciones.",
   "Airdrop": "Airdrop",
   "To participate in the airdrop, purchase tokens worth $50 during the presale.": "Para participar en el airdrop, compra tokens por un valor de $50 durante la preventa.",
   "Join the Airdrop": "Únete al Airdrop",
   "Join our family": "Únete a nuestra familia",
-  "Join the friendly Phenerium family and take part in sweepstakes!": "Únete a la familia Phenerium y participa en sorteos!",
-  "Invite friends and get 500 PHEN for each!": "Invita amigos y recibe 500 PHEN por cada uno!",
-  "No friends yet": "Aún no tienes amigos",
-  "Invite": "Invitar"
+  "Join the friendly Phenerium family and take part in sweepstakes!": "¡Únete a la familia amigable de Phenerium y participa en sorteos!",
+  "Invite friends and get 500 PHEN for each!": "¡Invita a amigos y obtén 500 PHEN por cada uno!",
+  "Invite": "Invitar",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "¡También participamos en el programa de referidos afiliados de Telegram, donde puedes obtener el 50% de las Estrellas que gastan tus amigos!",
+  "Paste your Telegram referral link below and share for free Stars!": "Pega tu enlace de referido de Telegram a continuación y compártelo para obtener Estrellas gratis!",
+  "Invite for free Stars": "Invita para Estrellas gratis",
+  "Where can I get a Telegram referral link?": "¿Dónde puedo obtener un enlace de referido de Telegram?",
+  "Open Phenerium": "Abre Phenerium",
+  "Open Phenerium, and go to the info menu.": "Abre Phenerium y ve al menú de información.",
+  "Find Affiliate Program": "Encuentra el Programa de Afiliados",
+  "Scroll to 'Affiliate Program' and select one.": "Desplázate hasta 'Programa de Afiliados' y selecciona uno.",
+  "Copy Link": "Copiar Enlace",
+  "Locate the referral link and copy it.": "Encuentra el enlace de referido y cópialo.",
+  "Go to 'Friends'": "Ve a 'Amigos'",
+  "Return to Phenerium and go to the 'Friends' section.": "Regresa a Phenerium y ve a la sección 'Amigos'.",
+  "Paste and Done": "Pega y Listo",
+  "Paste the link into the field and press 'Done'.": "Pega el enlace en el campo y presiona 'Listo'.",
+  "Get Bonus": "Obtener Bono",
+  "Bonus will be credited automatically after submission.": "El bono se acreditará automáticamente después de la presentación.",
+  "Farming Boosts": "Potenciadores de Cultivo",
+  "You dont have any boosts 😔": "No tienes ningún potenciador 😔",
+  "Add Boosts": "Agregar Potenciadores",
+  "Buy": "Comprar",
+  "Select Language": "Seleccionar Idioma",
+  "No content": "Sin contenido",
+  "Cases": "Cajas",
+  "Robot Assistants": "Asistentes Robot",
+  "Roadmap": "Hoja de ruta",
+  "Cosmo Forge": "Forja Cósmica",
+  "Shuttle Dock": "Muelle de Lanzadera",
+  "Warehouse": "Almacén",
+  "Collections ✨": "Colecciones ✨",
+  "Basic": "Básico",
+  "Bronze": "Almacén",
+  "Silver": "Plata",
+  "Gold": "Oro",
+  "Platinum": "Platino",
+  "Diamond": "Diamante",
+  "Friends": "Amigos",
+  "Bronze Collection": "Colección Bronce",
+  "Silver Collection": "Colección Plata",
+  "Gold Collection": "Colección Oro",
+  "Platinum Collection": "Colección Platino",
+  "Diamond Collection": "Colección Diamante"
 }
