--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -1,26 +1,64 @@
 {
-  "Total tokens": "총 토큰",
-  "PHEN": "PHEN",
+  "Home": "홈",
   "Boosts": "부스트",
-  "Skins": "스킨",
+  "Game": "게임",
+  "Tasks": "작업",
+  "Profile": "프로필",
+  "+ Add boosts": "+ 부스트 추가",
+  "Total tokens": "총 토큰",
   "Language": "언어",
-  "Settings": "설정",
-  "Connect TON Wallet": "TON 지갑 연결",
-  "Your address": "귀하의 주소",
-  "Farm PHEN Tokens": "PHEN 토큰 파밍",
-  "Farm": "파밍",
+  "Farm tokens": "토큰 농사",
+  "Farm": "농사",
+  "Claim": "청구",
   "Listing price": "상장 가격",
-  "Farming end": "파밍 종료",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "베스팅 날짜는 상장 가까이에서 팀에 의해 발표됩니다. 업데이트를 확인하세요.",
-  "Presale": "사전 판매",
-  "Presale price": "사전 판매 가격",
-  "Buy": "구매",
+  "Farming end": "농사 종료",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "베스팅 날짜는 상장에 가까워질수록 팀에서 발표할 예정입니다. 업데이트를 기다려 주세요.",
   "Airdrop": "에어드롭",
-  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "에어드롭에 참여하려면 사전 판매 기간 동안 $50 상당의 토큰을 구매하세요.",
+  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "에어드롭에 참여하려면 프리세일 기간 동안 $50 상당의 토큰을 구매하세요.",
   "Join the Airdrop": "에어드롭 참여",
   "Join our family": "우리 가족에 가입하세요",
-  "Join the friendly Phenerium family and take part in sweepstakes!": "친근한 Phenerium 가족에 가입하고 경품 행사에 참여하세요!",
-  "Invite friends and get 500 PHEN for each!": "친구를 초대하고 친구마다 500 PHEN을 받으세요!",
-  "No friends yet": "아직 친구가 없습니다",
-  "Invite": "초대"
+  "Join the friendly Phenerium family and take part in sweepstakes!": "친절한 Phenerium 가족에 가입하고 경품 추첨에 참여하세요!",
+  "Invite friends and get 500 PHEN for each!": "친구를 초대하고 각 친구당 500 PHEN을 받으세요!",
+  "Invite": "초대",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "우리는 또한 Telegram 제휴 추천 프로그램에 참여하고 있으며, 친구들이 지출한 별의 50%를 받을 수 있습니다!",
+  "Paste your Telegram referral link below and share for free Stars!": "아래에 Telegram 추천 링크를 붙여넣고 무료 별을 위해 공유하세요!",
+  "Invite for free Stars": "무료 별을 위해 초대",
+  "Where can I get a Telegram referral link?": "Telegram 추천 링크는 어디서 얻을 수 있나요?",
+  "Open Phenerium": "Phenerium 열기",
+  "Open Phenerium, and go to the info menu.": "Phenerium을 열고 정보 메뉴로 이동하세요.",
+  "Find Affiliate Program": "제휴 프로그램 찾기",
+  "Scroll to 'Affiliate Program' and select one.": "'제휴 프로그램'으로 스크롤하여 하나를 선택하세요.",
+  "Copy Link": "링크 복사",
+  "Locate the referral link and copy it.": "추천 링크를 찾아 복사하세요.",
+  "Go to 'Friends'": "'친구'로 이동",
+  "Return to Phenerium and go to the 'Friends' section.": "Phenerium으로 돌아가서 '친구' 섹션으로 이동하세요.",
+  "Paste and Done": "붙여넣기 및 완료",
+  "Paste the link into the field and press 'Done'.": "링크를 필드에 붙여넣고 '완료'를 누르세요.",
+  "Get Bonus": "보너스 받기",
+  "Bonus will be credited automatically after submission.": "보너스는 제출 후 자동으로 적립됩니다.",
+  "Farming Boosts": "농사 부스트",
+  "You dont have any boosts 😔": "부스트가 없습니다 😔",
+  "Add Boosts": "부스트 추가",
+  "Buy": "구매",
+  "Select Language": "언어 선택",
+  "No content": "콘텐츠 없음",
+  "Cases": "케이스",
+  "Robot Assistants": "로봇 조수",
+  "Roadmap": "로드맵",
+  "Cosmo Forge": "코스모 포지",
+  "Shuttle Dock": "셔틀 도크",
+  "Warehouse": "창고",
+  "Collections ✨": "컬렉션 ✨",
+  "Basic": "기본",
+  "Bronze": "창고",
+  "Silver": "실버",
+  "Gold": "골드",
+  "Platinum": "플래티넘",
+  "Diamond": "다이아몬드",
+  "Friends": "친구",
+  "Bronze Collection": "브론즈 컬렉션",
+  "Silver Collection": "실버 컬렉션",
+  "Gold Collection": "골드 컬렉션",
+  "Platinum Collection": "플래티넘 컬렉션",
+  "Diamond Collection": "다이아몬드 컬렉션"
 }
